--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -50,7 +50,23 @@ main section.categories-show {
         border-bottom-left-radius: 20px;
         font-size: 0.8em;
       }
+      aside.soldout-tag {
+        position: absolute;
+        top: 0;
+        left: 0;
+        padding: 10px;
+        background-color: pink;
+        border-top-left-radius: 4px;
+        border-bottom-right-radius: 20px;
+        font-size: 0.8em;
+        font-weight: bolder;
+        color: whitesmoke;
 
+        p {
+          margin-bottom: 0;
+        }
+      }
+      
       &:hover {
 
         border-color: #999;
