--- a/app/views/admin/products/_product.html.erb
+++ b/app/views/admin/products/_product.html.erb
@@ -1,22 +1,33 @@
-<tr>
-  <td>
-    <%= image_tag product.image.tiny %>
-  </td>
-  <td>
-    <h4><%= product.name %></h4>
-    <br>
-    <p><%= product.description %></p>
-  </td>
-  <td>
-    <%= product.category.name %>
-  </td>
-  <td>
-    <%= product.price %>
-  </td>
-  <td>
-    <%= product.quantity %>
-  </td>
-  <td>
-    <%= link_to fa_icon('trash'), [:admin, product], class: 'btn btn-sm btn-danger', method: :delete, data: { confirm: "Are you sure?" } %>
-  </td>
-</tr>
+<article class="product">
+
+  <header>
+    <%= link_to product do %>
+      <%= image_tag product.image.thumb, alt: product.name %>
+      <h4><%= product.name %></h4>
+    <% end %>
+  </header>
+  <p class="description">
+    <%= product.description %>
+  </p>
+  <footer class="actions">
+    <% if product.quantity > 0 %>
+      <%= button_to add_item_cart_path(product_id: product.id), class: 'btn btn-primary' , method: :post do %>
+        <%= fa_icon "shopping-cart", text: 'Add' %>
+      <% end %>
+    <% end %>
+    <%= link_to product, class: 'btn btn-default pull-right' do %>
+      Details &raquo;
+    <% end %>
+  </footer>
+
+  <aside class="price">
+    <%= humanized_money_with_symbol product.price %>
+  </aside>
+
+  <% if product.quantity == 0 %>
+    <aside class="soldout-tag">
+      <p>SOLD OUT</p>
+    </aside>
+  <% end %>
+
+</article>
