--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,16 +1,21 @@
 <article class="product">
+
   <header>
     <%= link_to product do %>
       <%= image_tag product.image.thumb, alt: product.name %>
       <h4><%= product.name %></h4>
     <% end %>
   </header>
+
   <p class="description">
     <%= product.description %>
   </p>
+
   <footer class="actions">
-    <%= button_to add_item_cart_path(product_id: product.id), class: 'btn btn-primary' , method: :post do %>
-      <%= fa_icon "shopping-cart", text: 'Add' %>
+    <% if product.quantity > 0 %> 
+      <%= button_to add_item_cart_path(product_id: product.id), class: 'btn btn-primary' , method: :post do %>
+        <%= fa_icon "shopping-cart", text: 'Add' %>
+      <% end %>
     <% end %>
     <%= link_to product, class: 'btn btn-default pull-right' do %>
       Details &raquo;
@@ -20,4 +25,11 @@
   <aside class="price">
     <%= humanized_money_with_symbol product.price %>
   </aside>
+
+   <% if product.quantity == 0 %>
+    <aside class="soldout-tag">
+      <p>SOLD OUT</p>
+    </aside>
+  <% end %>
+
 </article>
