--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,17 +1,25 @@
 <%# <h1>Admin::Dashboard#show</h1>
 <p>Find me in app/views/admin/dashboard/show.html.erb</p> %>
 
-<section>
-   <p>Have <%= @product_num %> products in the database</p>
-   <%= link_to "Review all products", admin_products_path %>
- </section>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <p>Have <%= @product_num %> products in the database</p>
+  </div>
+  <div class="panel-body">
+    <%= link_to "Review all products", admin_products_path %>
+  </div>
+</div>
 
- <section>
-   <p>Have <%= @categories.length %> categories in the database</p>
-   <ul>
-   <% @categories.each do |cate| %>
-     <li> <%= link_to "#{cate.name}", category_path(cate.id) %>
-     </li>
-   <% end %>
-   </ul>
- </section %>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <p>Have <%= @categories.length %> categories in the database</p>
+  </div>
+  <div class="panel-body">
+    <ul>
+      <% @categories.each do |cate| %>
+        <li> <%= link_to "#{cate.name}", category_path(cate.id) %>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+</div>
