--- a/app/assets/stylesheets/admin/dashboard.scss
+++ b/app/assets/stylesheets/admin/dashboard.scss
@@ -3,8 +3,20 @@ p {
 }
 
 ul {
-  display: flex;
   list-style: none;
-  justify-content: space-between;
   padding-left: 0;
 }
+
+ul#category {
+  display: flex;
+  justify-content: space-between;
+}
+
+#product-summary {
+  display: flex;
+  justify-content: space-between;
+}
+
+#sold-out-title {
+  font-weight: bolder;
+} 
