--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -39,6 +39,7 @@
           <ul class="dropdown-menu">
             <li><%= link_to 'Dashboard', [:admin, :root] %></li>
             <li><%= link_to 'Products',  [:admin, :products] %></li>
+            <li><%= link_to 'Categories',  [:admin, :categories] %></li>
           </ul>
         </li>
         <li>
@@ -46,6 +47,23 @@
             <%= fa_icon "shopping-cart" %> My Cart (<%= cart.size %>)
           <% end %>
         </li>
+        <% if current_user %>
+          <li>
+            <p id="display-username">
+              Singed in as <%= "#{current_user.first_name} #{current_user.last_name}" %>
+            </p>
+          </li>
+          <li>
+            <%= link_to "Logout", '/logout' %>
+          </li>
+        <% else %>
+          <li>
+            <%= link_to 'Login', '/login' %>
+          </li>
+          <li>
+            <%= link_to 'Signup', '/signup' %>
+          </li>
+        <% end %>
       </ul>
     </div>
   </div>
